components feitos parcial

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,9 +1,24 @@
 $branco: #ffffff;
 $preto: #000000;
-$amarela: #ffb200;
+$amarelo: #ffb200;
 $azul: #0e1c70;
 $verde: #73bf1f;
 $verde-limao: #3bff00;
+
+$c1: #264e86;
+$c2: #0074e4;
+$c3: #74dbef;
+$c4: #eff0f4;
+$c5: #6c757d;
+$cW: #ffffff;
+$cB: #000000;
+
+$tc1: #0074e4;
+$tc2: #343a40;
+$tc3: #212529;
+$tc4: #6c757d;
+$tcW: #ffffff;
+$tcB: #000000;
 
 $texto-primario-escuro:#343a40;
 $texto-secundario-escuro:#212529;
