--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1,3 +1,5 @@
+@use 'variables' as var;
+
 @font-face {
     font-family: "league-spartan";
     src: url('../fonts/LeagueSpartan-Bold.otf') format("opentype");
@@ -13,162 +15,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
-/* stylelint-disable selector-list-comma-newline-after */
-
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
-}
-
-
-.blog-header {
-    line-height: 1;
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.blog-header-logo {
-    font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-    font-size: 2.25rem;
-}
-
-.blog-header-logo:hover {
-    text-decoration: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-}
-
-.display-4 {
-    font-size: 2.5rem;
-}
-
-@media (min-width: 768px) {
-    .display-4 {
-        font-size: 3rem;
-    }
-}
-
-.nav-scroller {
-    position: relative;
-    z-index: 2;
-    height: 2.75rem;
-    overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
-    overflow-x: auto;
-    text-align: center;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-}
-
-.nav-scroller .nav-link {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    font-size: .875rem;
-}
-
-.card-img-right {
-    height: 100%;
-    border-radius: 0 3px 3px 0;
-}
-
-.flex-auto {
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-}
-
-.h-250 {
-    height: 250px;
-}
-
-@media (min-width: 768px) {
-    .h-md-250 {
-        height: 250px;
-    }
-}
-
-/*
- * Blog name and description
+/**
+ *
+ * Texts color classes
+ *
  */
-.blog-title {
-    margin-bottom: 0;
-    font-size: 2rem;
-    font-weight: 400;
+.ty-tcw {
+    color: var.$tcW;
 }
 
-.blog-description {
-    font-size: 1.1rem;
-    color: #999;
-}
-
-@media (min-width: 40em) {
-    .blog-title {
-        font-size: 3.5rem;
-    }
-}
-
-/* Pagination */
-.blog-pagination {
-    margin-bottom: 4rem;
-}
-
-.blog-pagination>.btn {
-    border-radius: 2rem;
-}
-
-/*
- * Blog posts
+/**
+ *
+ * Backgounds color classes
+ *
  */
-.blog-post {
-    margin-bottom: 4rem;
+.ty-bg-primary {
+    background-color: var.$c1;
 }
 
-.blog-post-title {
-    margin-bottom: .25rem;
-    font-size: 2.5rem;
-}
+@import 'header','footer','biografia';
 
-.blog-post-meta {
-    margin-bottom: 1.25rem;
-    color: #999;
-}
-
-/*
- * Footer
- */
-.blog-footer {
-    padding: 2.5rem 0;
-    color: #999;
-    text-align: center;
-    background-color: #f9f9f9;
-    border-top: .05rem solid #e5e5e5;
-}
-
-.blog-footer p:last-child {
-    margin-bottom: 0;
-}
+@import 'components/three-boxes-area',
+        'components/about-area',
+        'components/faq-area',
+        'components/cards-area';
