--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -1,16 +1,14 @@
-@use 'variables';
+@use 'variables' as var;
+
+$afterLineColor: linear-gradient(to left, var.$c1, var.$c2);
 
 #ty-header {
-    background: variables.$branco;
-    color: variables.$azul;
+    background: var.$cW;
     width: 100%;
-    // position: absolute;
-    // top: 0;
-    // z-index: 10;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    box-shadow: 0 .3px 5px variables.$texto-muted;
+    box-shadow: 0 .3px 5px var.$c5;
 
     &.inicial-top {
         background: rgba($color: #000000, $alpha: 0);
@@ -22,52 +20,57 @@
         margin: 5px 25px;
     }
 
-    nav {
+    nav > ul {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: flex-end;
+        margin: 0;
+        padding: 0;
+        list-style: none;
 
-        ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: flex-end;
+        li {
+            text-align: center;
+            margin: 0 5px;
+            position: relative;
 
-            li {
-                text-align: center;
-                margin: 0 5px;
-                position: relative;
-
-                a {
-                    text-decoration: none;
-                    font-weight: lighter;
-                    font-size: 1.2em;
-                    color: variables.$azul;
-
-                    &:hover {
-                        color: variables.$amarelo;
-                        // border-bottom: 2px solid variables.$verde;
-                    }
-                }
-
-                ::after {
+            &.active::after {
                     content: '';
                     position: absolute;
                     bottom: 0;
-                    left: 0;
+                    right: 0;
                     margin: 0 auto;
-                    width: 20px;
-                    height: 1px;
-                    background: variables.$amarelo;
-                }
+                    width: 40px;
+                    height: 2.5px;
+                    border-radius: 2px;
+                    background: $afterLineColor;
             }
 
+            a {
+                text-decoration: none;
+                font-weight: bold;
+                font-size: 1.2em;
+                color: var.$c1;
+
+                &:hover {
+                    color: var.$c2;
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        bottom: 0;
+                        right: 0;
+                        margin: 0 auto;
+                        width: 40px;
+                        height: 2.5px;
+                        background: $afterLineColor;
+                    }
+                }
+            }
         }
-
-
     }
 }
 
-/**
+/*******************************************************************************
  *
  *
  */
@@ -86,12 +89,12 @@
 .burger span {
     width: 100%;
     height: 4.5px;
-    background-color: variables.$texto-secundario-escuro;
+    background-color: var.$texto-secundario-escuro;
     transition: all 0.25s;
 }
 
 .burger.activated span {
-    background-color: variables.$texto-muted;
+    background-color: var.$texto-muted;
 }
 
 .burger.two.activated span:nth-child(1) {
