--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -30,6 +30,18 @@ html {
     color: var.$tcW;
 }
 
+.ty-tc1 {
+    color: var.$c1;
+}
+
+.ty-tc2 {
+    color: var.$c2;
+}
+
+.ty-tc3 {
+    color: var.$c3;
+}
+
 /**
  *
  * Backgounds color classes
