--- a/resources/scss/_footer.scss
+++ b/resources/scss/_footer.scss
@@ -9,12 +9,55 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.ty-footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 12px;
+
+    @media screen and (max-width: 960px) {
+        flex-direction: column;
+    }
+
+    >:nth-child(n) {
+        margin: 50px 25px 25px;
+
+        @media screen and (max-width: 960px) {
+            margin: 25px 0 12.5px;
+        }
+    }
 
     img {
-        width: 100px;
+        width: 250px;
     }
 
-    p {
-        font-size: .85em;
+    a {
+        margin: 10px;
+        color: var.$cW;
+        font-size: 1.2em;
+
+        span[uk-icon]{
+            margin: 0 5px;
+        }
+    }
+
+    .ty-resume {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+
+        @media screen and (max-width: 960px) {
+            align-items: center;
+        }
+    }
+
+    .ty-links-contact {
+        @media screen and (max-width: 960px) {
+            text-align: center;
+        }
     }
 }
+
