--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -39,8 +39,8 @@ $afterLineColor: linear-gradient(to left, var.$c1, var.$c2);
                     bottom: 0;
                     right: 0;
                     margin: 0 auto;
-                    width: 40px;
-                    height: 2.5px;
+                    width: 20px;
+                    height: .8px;
                     border-radius: 2px;
                     background: $afterLineColor;
             }
@@ -60,13 +60,23 @@ $afterLineColor: linear-gradient(to left, var.$c1, var.$c2);
                         bottom: 0;
                         right: 0;
                         margin: 0 auto;
-                        width: 40px;
-                        height: 2.5px;
+                        width: 20px;
+                        height: .8px;
                         background: $afterLineColor;
                     }
                 }
             }
         }
+    }
+}
+
+#ty-social-media {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    :nth-child(n) {
+        margin: 2.5px 5px;
     }
 }
 
@@ -79,8 +89,8 @@ $afterLineColor: linear-gradient(to left, var.$c1, var.$c2);
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     padding: 10px;
     cursor: pointer;
     overflow: hidden;
@@ -88,8 +98,8 @@ $afterLineColor: linear-gradient(to left, var.$c1, var.$c2);
 
 .burger span {
     width: 100%;
-    height: 4.5px;
-    background-color: var.$texto-secundario-escuro;
+    height: 3px;
+    background-color: var.$c1;
     transition: all 0.25s;
 }
 
@@ -98,7 +108,7 @@ $afterLineColor: linear-gradient(to left, var.$c1, var.$c2);
 }
 
 .burger.two.activated span:nth-child(1) {
-    transform: translateY(12px) rotate(45deg);
+    transform: translateY(8.5px) rotate(45deg);
 }
 
 .burger.two.activated span:nth-child(2) {
@@ -106,5 +116,5 @@ $afterLineColor: linear-gradient(to left, var.$c1, var.$c2);
 }
 
 .burger.two.activated span:nth-child(3) {
-    transform: translateY(-15px) rotate(-45deg);
+    transform: translateY(-8.5px) rotate(-45deg);
 }
