--- a/resources/scss/components/_timeline-area.scss
+++ b/resources/scss/components/_timeline-area.scss
@@ -1,33 +1,54 @@
-@use './variables' as var;
+@use './variables'as var;
 
 
 #ty-timeline-area {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    height: min-content;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+	height: min-content;
 }
 
 .ty-timeline-nav {
-    width: 200px;
-    height: 600px;
+	width: 200px;
+	height: 600px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-right: solid;
+    align-items: center;
 
-    img {
-        width: 100%;
-        object-fit: cover;
-        object-position: center center;
-    }
 }
 
 .ty-timeline-box {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -10;
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
     align-items: center;
+
+    li {
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -10;
+        display: flex;
+        justify-content: center;
+
+        div {
+            width: 50%;
+            z-index: 0;
+        }
+    }
+
+    img {
+        width: 100%;
+        height: 600px;
+        object-fit: cover;
+        object-position: center center;
+        position: absolute;
+
+    }
+
 
 }
