--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -68,7 +68,7 @@ html {
         width: 150px;
         height: 4px;
         display: block;
-        background: linear-gradient(to left, var.$c1, var.$c2);
+        background: linear-gradient(to left, var.$amarelo, var.$verde-limao);
         margin: 5px auto;
     }
 }
