--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -5,7 +5,7 @@ $azul: #0e1c70;
 $verde: #73bf1f;
 $verde-limao: #3bff00;
 
-$c1: #264e86;
+$c1: #0e1c70;
 $c2: #0074e4;
 $c3: #74dbef;
 $c4: #eff0f4;
