--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -75,8 +75,8 @@ html {
 
 @import 'header','footer','biografia';
 
-@import 'components/three-boxes-area',
+@import 'components/o-que-defendo',
         'components/about-area',
-        'components/faq-area',
+        'components/tres-poderes',
         'components/timeline-area',
         'components/cards-area';
