--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -60,7 +60,7 @@ html {
     align-items: center;
 
     :nth-child(n) {
-        margin: 0;
+        margin: 0 10px;
     }
 
     :nth-child(2)::before {
