--- a/resources/scss/components/_o-que-defendo.scss
+++ b/resources/scss/components/_o-que-defendo.scss
@@ -127,11 +127,70 @@ $urlIcon3Hover: '/icons/paper-plane-1-white.svg';
 }
 
 #modal-missao {
-    .ty-text-table {
+    .ty-modal-missao-text {
         font-size: 0.7em;
+        margin: 5px 10px;
+        width: 100px;
     }
 
     img {
-        width: 75%;
+        width: 50px;
+        height: 55px;
+    }
+
+    #segunda-frente td:nth-child(1) {
+        min-width: 60px !important;
+        padding: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+            height: 50px;
+        }
+    }
+}
+
+.ty-oportunidades-li {
+    margin: 10px 5px;
+}
+
+#ty-lista-videos-lateral {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 450px;
+
+    ul {
+        overflow: scroll;
+    }
+
+    li {
+        margin: 2.5px 5px;
+    }
+
+    li a img {
+        min-width: 150px;
+    }
+
+     /** small - breakpoint */
+     @media screen and (max-width: 650px) {
+        flex-direction: row;
+        height: 150px;
+        width: 90%;
+    }
+
+}
+
+#ty-container-videos-o-defendo {
+    max-height: 500px;
+}
+
+#o-que-defendo-videos {
+
+    li,
+    iframe {
+        height: 100%;
+        min-height: 400px;
     }
 }
